OPT: Angular rendering is a bit slow; defer rendering "marks" for terms,  until the first time the user hovers the cell. REFACTOR: Don't push into scope during Earley parsing. First parse, then  update the scope after each block. Created class Parser that wraps Nearley,  stripping comments, and splitting to blocks. BUGFIX: Incorrect error mark when error is at end of line. BUGFIX: Verification reported as "Error" if solver writes warning to stdout.  Changed to use error code instead.

--- a/src/index.css
+++ b/src/index.css
@@ -117,14 +117,14 @@ textarea, .CodeMirror-focused {
 .identifier:hover {
   background: rgba(0,0,0,0.1);
 }
+.tape-mark:hover {
+  background: #227;
+  color: white;
+}
 .tip {
   color: #227;
   position: relative;
   cursor: default;
-}
-.mark:hover {
-  background: #227;
-  color: white;
 }
 .tip:hover:before {
   content: attr(data-tip);
